--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,7 +11,8 @@
         "indent": ["error", 2],
         "quotes": ["error", "single"],
         "semi": ["error", "always"],
-        "no-unused-vars": 0
+        "no-unused-vars": 0,
+        "react/prop-types": 0
     },
 
     "globals": { "fetch": false }
